nxts.io/files/k8s/minion.yaml
#
# Author: Davi Gupta (davigupta@gmail.com)
# Copyright 2019
#
apiVersion: v1
kind: Service
metadata:
  name: abc-com-in
  labels:
    app: minion
spec:
  ports:
  - port: 8001
    name: inside
  selector:
    app: minion
---
apiVersion: v1
kind: Service
metadata:
  name: abc-com-out
  labels:
    app: minion
spec:
  ports:
  - port: 8002
    name: outside
  selector:
    app: minion
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: abc-gw-svc
spec:
  hosts:
  - "gateway.sjc.nextensio.net"
  gateways:
  - nextensio-ingressgateway
  http:
  - match:
    - headers:
       x-nextensio-for:
         prefix: "agent-10"
    route:
    - destination:
        host:
          abc-com-in
        port:
          number: 8001
  - match:
    - headers:
       x-nextensio-connect:
         prefix: "agent-10"
    route:
    - destination:
        host:
          abc-com-out
        port:
          number: 8002
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: abc-ingress
spec:
  host: abc-com-in
  subsets:
  - name: abc
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: abc-egress
spec:
  host: abc-com-out
  subsets:
  - name: abc
    labels:
      version: v1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: abc-minion
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: minion
        version: v1
        cluster: "sjc"
        role: minion
    spec:
      containers:
      - name: minion
        image: registry.gitlab.com/nextensio/cluster/minion:1.04
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8001
        - containerPort: 8002
      terminationGracePeriodSeconds: 60
---
